docs: add aufgabe 11

--- a/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
+++ b/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
@@ -203,6 +203,7 @@
 	\input{chapters/aufgabe 8/index}
 	\input{chapters/aufgabe 9/index}
 	\input{chapters/aufgabe 10/index}
+	\input{chapters/aufgabe 11/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
