--- a/docs/tests/einsendeaufgaben 4/literatur.bib
+++ b/docs/tests/einsendeaufgaben 4/literatur.bib
@@ -548,3 +548,11 @@ and Rundshagen, Michael",
     publisher = {Addison-Wesley Longman Publishing Co., Inc.},
     address = {USA}
 }
+
+@book{Pic08,
+    title={Scrum: agiles Projektmanagement erfolgreich einsetzen},
+    author={Pichler, R.},
+    isbn={9783898644785},
+    year={2008},
+    publisher={dpunkt-Verlag}
+}
