--- a/docs/tests/einsendeaufgaben 4/literatur.bib
+++ b/docs/tests/einsendeaufgaben 4/literatur.bib
@@ -556,3 +556,16 @@ and Rundshagen, Michael",
     year={2008},
     publisher={dpunkt-Verlag}
 }
+
+@inproceedings{CC77,
+    author =    {Cousot, P{.} and Cousot, R{.}},
+    title =     {Abstract interpretation: a unified lattice model for static
+    analysis of programs by construction or approximation of
+    fixpoints},
+    pages =     {238--252},
+    booktitle = {Conference Record of the Fourth Annual ACM SIGPLAN-SIGACT
+    Symposium on Principles of Programming Languages},
+    address =   {Los Angeles, California},
+    publisher = {ACM Press, New York, NY},
+    year =      1977,
+}
