docs: remove lösungsvorschläge from doc

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -17,7 +17,7 @@
 \usepackage{enumitem}
 \usepackage[outputdir=../../auxil]{minted}
 \usepackage{comment}
-\usepackage{ulem}
+\usepackage[normalem]{ulem}
 \usepackage[inkscapeformat=png]{svg}
 \usepackage[titles]{tocloft}
 \usepackage{titlesec}
@@ -183,7 +183,7 @@
 
 	\end{center}}							% Autor der Arbeit
 	\address{\begin{center}
-				 \small{01.06.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
+				 \small{14.06.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
 	\end{center}} 							% Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
 	\submitdate{} 				% Abgabedatum
 %\begingroup
