--- a/docs/repetitorium/part one/Prozessmodelle/index.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/index.tex
@@ -18,5 +18,5 @@
 \input{part one/Prozessmodelle/zusammenfassung}
 \newpage
 
-\input{part one/Prozessmodelle/loesungsvorschlaege}
-\newpage
+%\input{part one/Prozessmodelle/loesungsvorschlaege}
+%\newpage
