--- a/docs/repetitorium/part one/Software und Software Engineering/index.tex
+++ b/docs/repetitorium/part one/Software und Software Engineering/index.tex
@@ -19,5 +19,5 @@
 \input{part one/Software und Software Engineering/zusammenfassung}
 \newpage
 
-\input{part one/Software und Software Engineering/loesungsvorschlaege}
-\newpage
+%\input{part one/Software und Software Engineering/loesungsvorschlaege}
+%\newpage
