--- a/docs/repetitorium/part one/Uebersicht ueber die Phasen des Entwicklungszyklus/index.tex
+++ b/docs/repetitorium/part one/Uebersicht ueber die Phasen des Entwicklungszyklus/index.tex
@@ -13,5 +13,5 @@
 \input{part one/Uebersicht ueber die Phasen des Entwicklungszyklus/zusammenfassung}
 \newpage
 
-\input{part one/Uebersicht ueber die Phasen des Entwicklungszyklus/loesungsvorschlaege}
-\newpage
+%\input{part one/Uebersicht ueber die Phasen des Entwicklungszyklus/loesungsvorschlaege}
+%\newpage
