--- a/docs/repetitorium/part one/Requirements Engineering/index.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/index.tex
@@ -20,5 +20,5 @@
 \input{part one/Requirements Engineering/zusammenfassung}
 \newpage
 
-\input{part one/Requirements Engineering/loesungsvorschlaege}
-\newpage
+%\input{part one/Requirements Engineering/loesungsvorschlaege}
+%\newpage
