docs: update section qualitätsplanung

--- a/docs/repetitorium/part four/Management des QS-Prozesses/planung.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/planung.tex
@@ -21,6 +21,14 @@ Das \textbf{Wie}, also das Vorgehen beim Test, wird detailliert in einem \textbf
 Das \textbf{konkrete Vorgehen} beim Test wird in \textbf{Testfällen definiert}.\\
 \textbf{Von wem} welche der Maßnahmen durchgeführt wird, wird in einem getrennten Zeitplan oder im generellen Projektplan  geplant.
 
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.4]{part four/Management des QS-Prozesses/img/qualitätsplanung}
+    \caption{Übersicht über die verschiedenen Aktivitäten des Qualitätsmanagements nach \cite[479 ff.]{Bal08}). (Quelle: eigene)}
+    \label{fig:qualitätsplanung}
+\end{figure}
+
 \subsubsection*{Pläne in konkreten Projekten}
 In vielen Unternehmen ist die Art der qualitätssichernden Maßnahmen in unternehmensweit geltenden Standards geregelt.\\
 In diesem Fall kann auf diese Standards im Qualitätssicherungsplan bzw. im Tesplan verwiesen werden.\\
