chore(docs): update wording and formatting

--- a/docs/repetitorium/part one/Prozessmodelle/iterativ.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/iterativ.tex
@@ -60,7 +60,7 @@ Wie im Wasserfallmodell werden hier für die einzelnen Phasen Ergebnis-Artefakte
 
 \begin{itemize}
     \item Das Ergebnis der Entwicklung ist vorher nicht festgelegt, die Anforderungen entstehen erst im Laufe der Iterationen.
-    \item[] $\rightarrow$ hierdurch können Probleme bei der Projektplanung / Budgetierung entstehen, da die Kosten-Nutzen-Analyse für den Auftraggeber und die die Aufwandsabschätzung für den Auftragnehmer schwer fällt, was die Vertragsgestaltung komplizierter macht.
+    \item[] $\rightarrow$ hierdurch können Probleme bei der Projektplanung / Budgetierung entstehen, da die Kosten-Nutzen-Analyse für den Auftraggeber und die Aufwandsabschätzung für den Auftragnehmer schwer fällt, was die Vertragsgestaltung komplizierter macht.
 \end{itemize}
 
 \subsubsection*{Iterativ-Inkrementelles Vorgehen}
