--- a/docs/repetitorium/part one/Prozessmodelle/nebenlaeufig.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/nebenlaeufig.tex
@@ -1,7 +1,7 @@
 \subsection{Nebenläufig}
 
 \noindent
-Bei \textbf{nebenläufiger Entwicklung} werden am Anfang eines \textbf{Inkrements} oder einer \textbf{Iteration} einzelne Aufgaben identifiziert, wobei für Aufgabe i.d.R. die Phasen\textit{Anforderung}, \textit{Analyse},  \textit{Entwurf}, \textit{Realisierung} sowie \textit{Tests} durchlaufen werden muss.\\
+Bei \textbf{nebenläufiger Entwicklung} werden am Anfang eines \textbf{Inkrements} oder einer \textbf{Iteration} einzelne Aufgaben identifiziert, wobei für einzelne Aufgaben i.d.R. die Phasen\textit{Anforderung}, \textit{Analyse},  \textit{Entwurf}, \textit{Realisierung} sowie \textit{Tests} durchlaufen werden muss.\\
 Die Aufgaben können
 \begin{itemize}
     \item nach dem Wasserfallmodell oder iterativ bearbeitet werden
