--- a/docs/repetitorium/part one/Requirements Engineering/anforderungen.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/anforderungen.tex
@@ -73,7 +73,7 @@ Es eignet sich bspw. eine Einteilung in
     \item \textbf{Regeln} die die verschiedenen \textbf{Geschäftsobjekte} erfüllen müssen
     \item \textbf{Interface-Beschreibungen} Beschreibung der Schnittstellen zu anderen Systemen, vorgegebenen Dateiformaten oder der Hardware.
     Das GUI als Mensch/Maschine-Schnittstelle wird i.d.R. erst bei der Analyse entworfen.
-    \item \textbf{Datendefinitionen}: Informationen, in welchem FFormat bestimmte Daten vorliegen müssen.
+    \item \textbf{Datendefinitionen}: Informationen, in welchem Format bestimmte Daten vorliegen müssen.
     Wird bei der Anforderungsphase im sogenannten \textbf{Datadictionary} (s. Abschnitt \ref{sec:datadictionary-und-mengengerust}) gesammelt.
     \item \textbf{Lösungsideen} der Mitarbeiter, wie bestimmte Prozesse vereinfacht / verbessert abgebildet werden können.
     Hier sollten \textit{alle} Lösungsideen erfasst werden, auch solche, die ggf. als unmöglich umsetzbar/ widersprüchlich erscheinen
