--- a/docs/repetitorium/part one/Requirements Engineering/einfuehrung.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/einfuehrung.tex
@@ -53,7 +53,7 @@ Zur Lösung solcher Probleme bietet es sich an
 \begin{itemize}
     \item Aufwand für Anforderungen so gering wie möglich aber so umfangreich wie nötig halten - braucht der Kunde bspw. eine umfangreiche, normierte, bis in das kleinste Detail spezifizierte Dokumentation?
     \item Tabellarisch und mit durchdachten Vorlagen arbeiten
-    \item Auftrag nicht annehmen, da spätere Leistungen durch Anpassungen nicht bezahlt werden, oder Streitigkeiten über die vertragsbedingungen auftreten können
+    \item Auftrag nicht annehmen, da spätere Leistungen durch Anpassungen nicht bezahlt werden, oder Streitigkeiten über die Vertragsbedingungen auftreten können
 \end{itemize}
 
 
