--- a/docs/repetitorium/part one/Requirements Engineering/lastenheft.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/lastenheft.tex
@@ -15,7 +15,7 @@ Der Aufwand für die Entwicklung der Softwarelösung muss geringer sein als der 
 \subsubsection*{Definition der Ziele und des Umfangs}
 Die Ziele des Kunden (\textbf{Vision}) dienen als Voraussetzung für eine Auswahl der Funktionalität für die zu entwickelnde Lösung.\\
 Der Projektumfang (\textbf{Scope}) grenzt den Projektumfang ein und gibt Auskunft darüber, was entwickelt werden soll und was nicht.\\
-Da der Nutzen für den kunden im Vordergrund steht, muss es sich bei \textbf{Vision \& Scope} um die \textit{Kundensicht} handeln.\\
+Da der Nutzen für den Kunden im Vordergrund steht, muss es sich bei \textbf{Vision \& Scope} um die \textit{Kundensicht} handeln.\\
 
 \subsubsection*{Beteiligte entwickeln gemeinsam eine Richtung}
 Die \textbf{Stakeholder} - also alle vom Projekt betroffenen Personen - erarbeiten dabei eine gemeinsame Sicht auf die \textit{Zielstellung} und den \textit{Nutzen} des Projektes.\\
@@ -32,7 +32,7 @@ Wichtig ist die Klärung von \textit{Kernfragen} in einem solchen Dokument:
 \begin{itemize}
     \item Was ist die Vision?
     \item Was soll gemacht werden und was nicht?
-    \item Welchen konkreten Nutzen erwartet der Kunden hiervon?
+    \item Welchen konkreten Nutzen erwartet der Kunde hiervon?
 \end{itemize}
 
 \noindent
