--- a/docs/repetitorium/part one/Requirements Engineering/typischeproblemeundihreloesungen.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/typischeproblemeundihreloesungen.tex
@@ -9,7 +9,7 @@ Deshalb wird i.d.R. zuerst ein \textbf{Vision \& Scope} erstellt und die \textbf
 Wesentliche Fragen sollten aber auch bei kleineren Projekten geklärt werden, indem auch dort ein Lastenheft erstellt wird - ggfl. reicht hier auch nur eine stichpunkthaltige Zusammenfassung der wesentlichsten Punkte.\\
 
 \subsubsection*{Erstellung von Vision \& Scope klärt Anforderungen}
-Es sollte bei der Erstellung von \textbf{Vision \& Scope} in jedem Fall darauf geachtet werden, die \textbf{Stakeholder miteinzubeziehen}, damit keine wichtigen Anforderungen übersehen werden.\\
+Es sollte bei der Erstellung von \textbf{Vision \& Scope} in jedem Fall darauf geachtet werden, die \textbf{Stakeholder} miteinzubeziehen, damit keine wichtigen Anforderungen übersehen werden.\\
 
 \subsubsection*{Verschiedene Menschen = verschiedene Ziele}
 In diesem Zusammenhang zeigt sich auch immer wieder, dass verschiedene Mitarbeiter der Kunden sehr unterschiedliche Sichten auf die Aufgaben haben können, was zu \textbf{gegensätzlichen} bzw. \textbf{sich widersprechenden Anforderungen} führen kann.\\
