--- a/docs/repetitorium/part one/Requirements Engineering/domaenenanalyse.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/domaenenanalyse.tex
@@ -4,17 +4,17 @@
 Bei der \textbf{Domänenanalyse} eignen sich Entwickler Wissen über die umzusetzende Fachlichkeit an.\\
 
 \subsubsection*{Ziele}
-Wissen über die Domäne verspricht ein effektiveres und effizienteres Zusammenarbeiten mit Kunden und Anwendern, da auf einer gemeinsamen Basis kommuniziert werden kann, in der elementare Begriffe und Konzepte der Domände von allen Beteiligten gleich verstanden werden.\\
-Dies erleichtert das Vorahnen von Anforderungen bzw. Anpassungen und das Treffen richtiger Entscheidschungen.\\
+Wissen über die Domäne verspricht ein effektiveres und effizienteres Zusammenarbeiten mit Kunden und Anwendern, da auf einer gemeinsamen Basis kommuniziert werden kann, in der elementare Begriffe und Konzepte der Domäne von allen Beteiligten gleich verstanden werden.\\
+Dies erleichtert das Vorahnen von Anforderungen bzw. Anpassungen und das Treffen richtiger Entscheidungen.\\
 Domänenwissen veraltet deutlich langsamer als technisches Wissen, weshalb Experten einer speziellen Domäne wertvolle Mitarbeiter sind.\\
 
 \subsubsection*{Quellen}
 Domänenwissen kann aus Fachartikeln bzw. Fachbüchern gewonnen werden bzw. in Schulungen oder durch Gespräche mit fachkundigen Mitarbeitern des Kunden bzw. Kollegen.\\
-Bevor das gespräch mit Fachexperten genutzt wird, um Detailfragen zu klären, sollte sich der Entwickler zunächst selber einen Überblick über die Fachlichkeit verschaffen, um den Kontext fachbezogener Fragen selber besser einschätzen zu können.\\
+Bevor das Gespräch mit Fachexperten genutzt wird, um Detailfragen zu klären, sollte sich der Entwickler zunächst selber einen Überblick über die Fachlichkeit verschaffen, um den Kontext fachbezogener Fragen selber besser einschätzen zu können.\\
 
 \subsubsection*{Ergebnisse}
 Nach der Domänenanalyse ist ein Entwickler besser auf seine Aufgabe vorbereitet, und der Informationsaustausch gelingt besser.
-Außerdem ist er in der Lage, neuen Mitarbeiter den Einstieg zu erleichtern, wozu solche Informationen auch schriftlich niedergelegt werden sollten.\\
+Außerdem ist er in der Lage, neuen Mitarbeitern den Einstieg zu erleichtern, wozu solche Informationen auch schriftlich niedergelegt werden sollten.\\
 \textit{Wedemann} nennt hierzu folgende Dokumentenarten (vgl.~\cite[42]{Wed09}):
 
 \begin{itemize}
