chore(docs): fix typos

--- a/docs/repetitorium/part two/Objektorientierte Analyse/modelle in analyse und entwurf.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/modelle in analyse und entwurf.tex
@@ -24,7 +24,7 @@ Stattdessen erstellt man in der \textbf{Analysephase} ein formales Modell:
 
 
 \subsection*{Entwurf}
-In der \textbf{Entwurfsphase} werden die \textbf{Architektur} der Anwendung bestimmt, unter Berücksichtung technischer Randbedingungen, die im Rahmen nicht-funktionaler Anforderungen in der Anforderungsphase gesammelt wurden und vom Kunden stammen (s. Abschnitt~\ref{subsec:technische-randbedingung}).\\
+In der \textbf{Entwurfsphase} wird die \textbf{Architektur} der Anwendung bestimmt, unter Berücksichtung technischer Randbedingungen, die im Rahmen nicht-funktionaler Anforderungen in der Anforderungsphase gesammelt wurden und vom Kunden stammen (s. Abschnitt~\ref{subsec:technische-randbedingung}).\\
 Die Architektur schließt u.a. ein:
 
 \begin{itemize}
