chore(docs): fix typos

--- a/docs/repetitorium/part one/Prozessmodelle/lernziele.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/lernziele.tex
@@ -3,6 +3,6 @@
     \item Grenzen des Wasserfallmodells einschätzen können
     \item Unterschiede zwischen iterativem und inkrementellem Vorgehen verstehen
     \item Anliegen und Grundprinzipien agilen Vorgehens kennen
-    \item einige klassische und agile Vorgehensmodelle kennen (V-Modell XT, RUB, Scrum, XP)
+    \item einige klassische und agile Vorgehensmodelle kennen (V-Modell XT, RUP, Scrum, XP)
     \item einschätzen können, welches Vorgehen wann zu bevorzugen ist
 \end{itemize}
