chore(docs): fix typos and update structure

--- a/docs/repetitorium/part two/Objektorientierte Analyse/analysemuster.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/analysemuster.tex
@@ -27,7 +27,7 @@ Im Bereich des Software Engineerings gibt es Muster für \textbf{Analyse}, \text
 \subsection*{Standardisierte Beschreibung}
 
 \begin{itemize}
-    \item Beschreibung des Problem in seinem Kontext
+    \item Beschreibung des Problems in seinem Kontext
     \item Lösung
     \item Beispiele
     \item Gegebenenfalls Antimuster
