--- a/docs/repetitorium/part two/Objektorientierte Analyse/beziehungen von klassen.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/beziehungen von klassen.tex
@@ -12,7 +12,7 @@ Klassen können auf drei unterschiedliche Arten miteinander in Beziehung stehen:
 Bei der Analyse müssen diese Arten von Beziehungen ermittelt werden, damit entsprechend modelliert werden kann.\\
 
 \subsection*{Abhängigkeiten}
-\textbf{Abhängikeiten} nutzten eine gestrichelte Linie.\\
+\textbf{Abhängikeiten} nutzen eine gestrichelte Linie.\\
 Abhängigkeiten werden \textit{in der Analyse} i.d.R. selten modelliert.\\
 Als Beispiel für eine Abhängigkeit sei eine \textit{Benutzt-Beziehung} in Form eines \textit{formalen Parameter} gegeben: Der aktuelle Parameter überdauert den Aufruf einer Methode in einer Klasse, für die diese Abhängigkeit modelliert werden soll, nicht.\\
 Gleicherweise kann auch eine \textit{lokale Variable} eines bestimmten Typs eine Abhängigkeit bedeuten.
@@ -20,7 +20,7 @@ Gleicherweise kann auch eine \textit{lokale Variable} eines bestimmten Typs eine
 \subsection*{Assoziation}
 Unter einer \textbf{Assoziation} versteht man, dass ein Objekt ein anderes Objekt derselben oder anderen Klasse \textit{dauerhaft} kennt.\\
 Assoziationen werden anhand einer durchgezogenen Linie dargestellt.\\
-Wird in einem Objekt einer bestimmten Klasse in einem Attribute eine Referenz auf ein Objekt einer anderen oder derselben Klasse gespeichert, existiert eine Assoziation zwischen diesen beiden Klassen.
+Wird in einem Objekt einer bestimmten Klasse in einem Attribut eine Referenz auf ein Objekt einer anderen oder derselben Klasse gespeichert, existiert eine Assoziation zwischen diesen beiden Klassen.
 
 \subsection*{Vererbung}
 Eine \textbf{Vererbung} bedeutet in Vererbungsrichtung eine \textbf{Spezialisierung}, entgegengesetzt eine \textbf{Generalisierung}\footnote{
