--- a/docs/repetitorium/part two/Objektorientierte Analyse/modellierung der dynamik.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/modellierung der dynamik.tex
@@ -11,7 +11,7 @@ Um darzustellen, wie sich Klassen oder Objekte verhalten, nutzt man das \textbf{
 
 \noindent
 Hierzu werden in der \textbf{Analyse} Zustände und Zustandsübergänge eines Systems sowie Aktivitäten modelliert.\\
-Grundlage sind Dokumente der Anforderungen, die \textbf{Verhalten} beschreiben, also\textbf{User Stories}, \textbf{Anwendungsfälle} und \textbf{Szenarien}.\\
+Grundlage sind Dokumente der Anforderungen, die \textbf{Verhalten} beschreiben, also \textbf{User Stories}, \textbf{Anwendungsfälle} und \textbf{Szenarien}.\\
 Die dort beschriebenen Abläufe werden bei der dynamischen Modellierung konkretisiert und genauer definiert.
 
 \subsection*{Zustände und Zustandsänderungen}
@@ -34,7 +34,7 @@ Die grafische Darstellung dieses Verhaltens erreicht man über \textbf{UML-Zusta
 Bei Zustandsdiagrammen erschließt sich der Ablauf von Aktivitäten meist nur indirekt, da bspw. keine Auskunft über die beteiligten Akteure modelliert werden können.\\
 
 \noindent
-Aus diesem Grund verwendet man \textbf{UML-Aktivitätsdiagramm}\footnote{
+Aus diesem Grund verwendet man \textbf{UML-Aktivitätsdiagramme}\footnote{
 s. ``15 Activities``, S. 373, \url{https://www.omg.org/spec/UML/2.5.1/PDF}, abgerufen 22.04.2024
 }, in denen Aktivitäten in ihrer möglichen Abfolge und ihrer Zuordnung zu Akteuren modelliert werden (s. Abbildung~\ref{fig:activitydiagram}).\\
 
