docs: update structure and index

--- a/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
+++ b/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
@@ -28,7 +28,7 @@ Die Beantwortung dieser Fragen hat entscheidende Auswirkungen auf die weitere En
 
 \noindent
 Dabei liefern Architekten \textbf{Aufwandsabschätzungen}, die die Wirtschaftlichkeit beeinflussen können, und überprüfen die Machbarkeit von Ideen.\\
-Hierbei entsteht eine Rückkoppelungsschleife, da Ideen zum Produkt zu Fragen und Aussagen zur Softwarearchitektur führen, die wiederum die Ideen zum Produkt beeinflussen (vgl.\cite[37]{Wed09b}, s. außerdem Abbildung~\ref{fig:aic}).
+Hierbei entsteht eine \textbf{Rückkoppelungsschleife}, da Ideen zum Produkt zu Fragen und Aussagen zur Softwarearchitektur führen, die wiederum die Ideen zum Produkt beeinflussen (vgl.\cite[37]{Wed09b}, s. außerdem Abbildung~\ref{fig:aic}).
 
 \subsection*{Grundlage: Anforderungen und Randbedingungen}
 Grundlage für die Auswahl einer Softwarearchitektur sind die \textbf{Anforderungen} und \textbf{Randbedingungen}.
