chore(docs): wording updates

--- a/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
+++ b/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
@@ -2,6 +2,7 @@
 
 UML ist kein verbindlicher ISO-Standard, erfährt aber trotzdem eine hohe Akzeptanz durch die Industrie.\\
 
+\noindent
 Die Spezifikation von UML (\cite{OMG17}) durch die \textbf{OMG} (\textit{Object Management Group}\footnote{
     \url{https://omg.org}, abgerufen 29.04.2024
 }) umfasst vier Teile:
@@ -13,7 +14,7 @@ Die Spezifikation von UML (\cite{OMG17}) durch die \textbf{OMG} (\textit{Object 
     \item \textbf{UML 2.0 Infrastructure}: Definiert grundlegende Modellierungskonzepte als Basis für die Entwicklung von UML 2.0
     \item \textbf{UML 2.0 Object Constraint Language}\footnote{
     \textit{OCL}, \url{https://www.omg.org/spec/OCL/}, abgerufen 29.04.2024
-    }: Definiert eine formale Sprache zur Formulierung von \textit{Einschränkungen} (Vor-/nachbedingungen für Operationen, Wertebereiche von Datentypen, Definition von Modellierungskonzepten im UML Metamodell, \ldots))
+    }: Definiert eine formale Sprache zur Formulierung von \textit{Einschränkungen} (Vor-/nachbedingungen für Operationen, Wertebereiche von Datentypen, Definition von Modellierungskonzepten im UML Metamodell, \ldots)
     \item \textbf{UML 2.0 Diagram Interchange} (\textit{XMI}\footnote{
     \textit{XML Metadata Interchange}: \url{https://www.omg.org/spec/XMI}, abgerufen 30.04.2024
     }): Definiert ein Austauschformat auf Basis von XML, bspw. für Import-/Export von MOdellen in unterschiedlichen Tools
@@ -85,7 +86,7 @@ In der MOF werden grundlegende Konzepte definiert, die wiederum in der UML für 
 \end{enumerate}
 
 \noindent
-Das Metamodell der UML sowie deren Verwendung zur Erstellung von Diagrammen wird in der Teil Superstructure der OMG Spezifikationen dokumentiert.\\
+Das Metamodell der UML sowie deren Verwendung zur Erstellung von Diagrammen wird in dem Teil Superstructure der OMG Spezifikationen dokumentiert.\\
 Die Erklärung der Konzepte basiert auf einer abstrakten Syntax, zu deren Beschreibung wiederum Klassendiagramme genutzt werden.
 Regeln zur syntaktischen Korrektheit werden mittels der \textbf{OCL} beschrieben.
 Die Bedeutung der Modellierungskonzepte wird textlich beschrieben.\\
