--- a/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
@@ -29,6 +29,6 @@ Also Voraussetzung für das Beschreiben von Verhalten ist der Entwurf der beteil
 In dem Fall sind die Kommunikationspartner dann \textit{Objekte}.\\
 
 \noindent
-Interaktionen könenn aber auch auf Ebene von Systemkomponenten definiert werden, um Systemverhalten zu modellieren\footnote{
+Interaktionen können aber auch auf Ebene von Systemkomponenten definiert werden, um Systemverhalten zu modellieren\footnote{
 Kommunikationspartner kann dann bspw. ``Datenbankmanagementsystem`` sein.
 }.
