--- a/docs/repetitorium/part three/Sequenzdiagramme/zusammenfassung.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/zusammenfassung.tex
@@ -4,7 +4,7 @@
 \begin{itemize}
     \item Sequenzdiagramme sind \textbf{Verhaltensdiagramme}
     und können im gesamten Entwicklungszyklus zur Modellierung von Interaktionen angewendet werden
-    \item Interaktionen bestehen im wesentlichen aus dem Nachrichtenaustausch zwischen verschiedenen Kommunikationspartnern
+    \item Interaktionen bestehen im Wesentlichen aus dem Nachrichtenaustausch zwischen verschiedenen Kommunikationspartnern
     \item in den meisten Fällen wird die Kommunikation von Objekten von Klassen modelliert, aber es können auch Teilnehmer auf anderen Ebenen modelliert werden
     \item gewöhnlich gibt ein Sequenzdiagramm einen \textbf{Anwendungsfall} (\textit{Szenario}) wieder
     \item sie dienen nicht dazu, um Zustandsänderungen darzustellen (hierfür werden Zustandsdiagramme verwendet)
