--- a/docs/repetitorium/part three/Sequenzdiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/begriffe und elemente.tex
@@ -22,7 +22,7 @@ Neben Operationsaufrufen können Nachrichten auch als Signalübermittlung auftre
 
 \noindent
 Als Ausgangspunkt einer Nachricht kann eine sog. \textbf{found message} dienen. Eine \textit{found message} ist eine Nachricht, bei der dem Empfänger bekannt ist, die Angabe des Senders aber außerhalb der zu erstellenden Spezifikation liegt.\\
-Um einen Endpunkt zu modellieren, kann eine \textbf{lost message} verwendet werden - hierbei liegt der Empfänger außerhelb der Spezifikation  (vgl.~\cite[598]{OMG17}).\\
+Um einen Endpunkt zu modellieren, kann eine \textbf{lost message} verwendet werden - hierbei liegt der Empfänger außerhalb der Spezifikation  (vgl.~\cite[598]{OMG17}).\\
 Die Notation für beide ist in Abbildung~\ref{fig:lost-found-message} dargestellt.
 
 \begin{figure}
@@ -85,13 +85,13 @@ Auf den Lebenslinien der Kommunikationspartner werden \textbf{Aktionssequenzen} 
 \begin{figure}
     \centering
     \includegraphics[scale=0.5]{part three/Sequenzdiagramme/img/stateinvariant}
-    \caption{Angabe einer Zustandsbedingung unter Verwendung einer \textbf{StateInvariant}-Elements. (Quelle: in Anlehnung an \cite[597]{OMG17})}
+    \caption{Angabe einer Zustandsbedingung unter Verwendung eines \textbf{StateInvariant}-Elements. (Quelle: in Anlehnung an \cite[597]{OMG17})}
     \label{fig:stateinvariant}
 \end{figure}
 
 \noindent
 Kommunikationspartner können erzeugt (\textbf{creation event}) und zerstört werden (\textbf{destruction event}), wodurch die Erzeugung und das Zerstören bspw. von Objekten im Interaktionsrahmen ausgedrückt wird.
-Bei dem Zerstören eines Objektes wird an seine Lebenslinie ein \textbf{DestructionOccurrenceSpecification symbol} notiert, welches die gestalt eines "X" hat (vgl.~\cite[578]{OMG17}).
+Bei dem Zerstören eines Objektes wird an seine Lebenslinie ein \textbf{DestructionOccurrenceSpecification symbol} notiert, welches die Gestalt eines "X" hat (vgl.~\cite[578]{OMG17}).
 
 \begin{tcolorbox}[title=creation event, colback=white]
     Eine Nachricht, die das Erzeugen eines Objektes bewirkt, hat eine gestrichelte Linie und und eine offene Pfeilspitze (vgl~\cite[577]{OMG17})
@@ -107,7 +107,7 @@ Folgende Bezeichner können für den Operator angegeben werden (vgl.~\cite[583]{
     \item \code{alt} - es können mehrere alternative Abläufe definiert werden
     \item \code{loop} - mehrere Ausführungen, die von einer Bedingung gesteuert werden
     \item \code{opt} - Ausführung, wenn eine geg. Bedingung zutrifft
-    \item \code{par} - fragment läuft parallel
+    \item \code{par} - Ffragment läuft parallel
 \end{itemize}
 
 \begin{figure}
@@ -132,7 +132,7 @@ Die Signatur eines Interaktionsrahmens kann dann erweitert werden:\\
 \code{Name[Parameterliste][:Rückgabetyp]}\\
 
 \blockquote[{\cite[35]{Buh09}}]{
-Bei der Verwendung eines Interaktionsrahmens mit definierten Parametern müssen dann die notwendigen Argumente Übergeben werden.
+Bei der Verwendung eines Interaktionsrahmens mit definierten Parametern müssen dann die notwendigen Argumente übergeben werden.
 }
 
 Für ein Beispiel s. Abbildung~\ref{fig:interaktionsreferenz}.
