chore(docs): restructure document

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
@@ -2,6 +2,8 @@
 
 
 \input{part two/Objektorientierter Entwurf/lernziele}
+\newpage
+
 \input{part two/Objektorientierter Entwurf/von der analyse zum entwurf}
 \input{part two/Objektorientierter Entwurf/klassen im entwurf}
 \input{part two/Objektorientierter Entwurf/strukturen und verhalten}
@@ -10,7 +12,9 @@
 \input{part two/Objektorientierter Entwurf/beispiel eines entwurfs}
 \input{part two/Objektorientierter Entwurf/prinzipien guten entwurfs}
 \input{part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring}
-\input{part two/Objektorientierter Entwurf/zusammenfassung}
 \newpage
+
+\input{part two/Objektorientierter Entwurf/zusammenfassung}
+
 
 
