--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
@@ -37,16 +37,16 @@ Systeme realisieren das Verhalten von Anwendungsfällen, bei denen sich Akteure 
 Zwischen Akteuren und Anwendungsfällen können \textbf{Generalisierungsbeziehungen} modelliert werden (vgl. im Folgenden~\cite[66]{Bal05}):
 
 \begin{itemize}
-    \item zwischen \textbf{Anwendungsfällen}
+    \item zwischen \textbf{Akteuren}
     \begin{itemize}
         \item Das Verhalten und die Beziehungen zu den Akteuren wird vererbt.
         \item Der spezialisierte Akteur erbt die Eigenschaften des allgemeineren Akteurs und kann weitere Eigenschaften hinzufügen.
     \end{itemize}
-    \item zwischen \textbf{Akteuren}:
+    \item zwischen \textbf{Anwendungsfällen}:
     \begin{itemize}
         \item Der spezialisierte Use-Case erbt die Eigenschaften des allgemeineren Use-Cases.
         \item Die Beziehungen des allgemeineren Use-Cases (bspw. \code{extend}-Beziehungen) und seine Assoziationen zu Akteuren werden an die spezialisierten Use-Cases vererbt.
-        \item  Der spezialisierte Use-Case kann neue Eigenschaften und neues Verhalten definieren.
+        \item Der spezialisierte Use-Case kann neue Eigenschaften und neues Verhalten definieren.
     \end{itemize}
 \end{itemize}
 
