--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/zusammenfassung.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/zusammenfassung.tex
@@ -4,6 +4,6 @@
 
 \begin{itemize}
     \item \textbf{Anwendungsfalldiagramme} besitzen eine einfache Notation, um \textbf{Akteure} und \textbf{Anwendungsfälle} eines \textbf{Systems} grafisch darzustellen
-    \item auf Basis eines Anwendungsfalldiagramms lässt sich ermitteln, odb die Anwendungsfälle gewünschtes Verhalten realisieren bzw. Beziehungen zu einem oder mehreren Akteuren haben
+    \item auf Basis eines Anwendungsfalldiagramms lässt sich ermitteln, ob die Anwendungsfälle gewünschtes Verhalten realisieren bzw. Beziehungen zu einem oder mehreren Akteuren haben
     \item Anwendungsfälle und Akteure \textit{müssen} zusätzlich textlich beschrieben werden
 \end{itemize}
