--- a/docs/repetitorium/part three/Zustandsautomaten/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Zustandsautomaten/begriffe und elemente.tex
@@ -105,7 +105,7 @@ Im Gegensatz zu dem Entscheidungszustand handelt es sich um eine statische Verzw
 \begin{figure}
     \centering
     \includegraphics[scale=0.4]{part three/Zustandsautomaten/img/kreuzungentscheidung}
-    \caption{\textbf{Static} (links) und \textbf{dynamic conditional branch}. Bei der Kreuzung (links) wird der Guard vor der Aktivität ausgewertet, weshalb sich das Objekt nach der Transition in \textit{Zustand 3} befindet. Im Gegensatz dazu reagiert die \textbf{Entscheidung} (rechts) dynamisch auf die Aktivität und befindet sich deshalb nach der Transition in Zustand 2. (Quelle: in Anlehnung an \cite[72, Abb. 7.7, Abb. 7.8]{Buh09})}
+    \caption{\textbf{Static} (links) und \textbf{dynamic conditional branch} (rechts). Bei der Kreuzung (links) wird der Guard vor der Aktivität ausgewertet, weshalb sich das Objekt nach der Transition in \textit{Zustand 3} befindet. Im Gegensatz dazu reagiert die \textbf{Entscheidung} (rechts) dynamisch auf die Aktivität und befindet sich deshalb nach der Transition in Zustand 2. (Quelle: in Anlehnung an \cite[72, Abb. 7.7, Abb. 7.8]{Buh09})}
     \label{fig:kreuzungentscheidung}
 \end{figure}
 
