docs: update cheat sheets with facade uml

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -452,8 +452,7 @@ and Rundshagen, Michael",
 @book{GHJV94,
     title={Design Patterns: Elements of Reusable Object-Oriented Software},
     author={Gamma, E. and Helm, R. and Johnson, R. and Vlissides, J.},
-    isbn={9780321700698},
-    lccn={94034264},
+    isbn={0-201-63361-2},
     series={Addison-Wesley Professional Computing Series},
     year={1994},
     publisher={Pearson Education}
