docs: update index and wording

--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
@@ -39,7 +39,7 @@ Die \textbf{textliche Beschreibung} eines Anwendungsfalls sollte folgende Inform
         \item Anwendungsfälle identifizieren
         \item Beschreiben der Akteure und Anwendungsfälle
         \item Identifizieren von \textit{Schlüsselobjekten}, die das System verwaltet
-        \item Identifizieren der wichtigsten Anwendungsfälle (Priorisierung
+        \item Identifizieren der wichtigsten Anwendungsfälle (Priorisierung)
         \item detailliertere Beschreibung der Anwendungsfälle
         \item Strukturierung des Anwendungsfalldiagramms
     \end{enumerate}
