--- a/docs/repetitorium/part three/Einführung/diagrammübersicht.tex
+++ b/docs/repetitorium/part three/Einführung/diagrammübersicht.tex
@@ -20,7 +20,7 @@ Für eine Systemmodellierung können alle dieser 6 Diagramme verwendet werden.
     \item \textbf{Komponentendiagramm}: Stellt Komponenten oder auch \textit{Subsysteme} mit definierten Interfaces dar, um bspw. \textbf{Architekturdesign} darzustellen.
     \item \textbf{Verteilungsdiagramm}: Beschreibt eine Menge von Knoten, die die \textit{Ausführungsarchitektur} eines Systems definieren können, wobei Knoten i.d.R. \textit{Geräte} oder \textit{Softwareablaufumgebungen repräsentieren}.
     \item \textbf{Kompositionsstrukturdiagramm}: Stellt die \textbf{Komposition} von \textit{Systemstrukturen} (Klassen, Komponenten, Gesamtsystem) in einem bestimmten \textit{Kontext} mit einem bestimmten \textit{Ziel} dar (vgl. \cite[9]{Buh09}).
-    \item \textbf{Objektdiagramm}: Momentaufnahme eines Systems zu genau einem \textit{Zeitpukt} während der Ausführung-
+    \item \textbf{Objektdiagramm}: Momentaufnahme eines Systems zu genau einem \textit{Zeitpukt} während der Ausführung
 \end{itemize}
 
 
