--- a/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
+++ b/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
@@ -1,6 +1,6 @@
 \section{Einsatzbereich von Paketdiagrammen}
 
-\begin{tcolorbox}
+\begin{tcolorbox}[title=Paketdiagramm]
 \textbf{Paketdiagramme} zeigen Pakete und ihre Abhängigkeiten und werden in frühen Designphasen genutzt, um Strukturen (großer Systeme) aufzuzeigen.
 \end{tcolorbox}
 
