--- a/docs/repetitorium/part three/Zustandsautomaten/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Zustandsautomaten/einsatzbereich.tex
@@ -2,7 +2,7 @@
 
 Mit \textbf{Zustandsautomaten} kann das \textit{Verhalten} von Systemen modelliert werden, wobei die \textit{Reaktionen} des Systems im Mittelpunkt stehen, und nicht die \textit{Aktionen}, wie bspw. bei den \textbf{Aktivitätsdiagrammen}.
 
-\begin{tcolorbox}
+\begin{tcolorbox}[title=Zustandsautomat]
     Ein \textbf{Zustandsautomat} kann den \textit{Lebensweg} eines Objektes modellieren, weshalb Zustandsautomaten oft im \textbf{Entwurf} als Ergänzung zu den \textbf{Klassendiagrammen} eingesetzt werden.
 \end{tcolorbox}
 
