--- a/docs/repetitorium/part three/Aktivitätsdiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Aktivitätsdiagramme/einsatzbereich.tex
@@ -2,7 +2,7 @@
 
 Das \textbf{Aktivitätsdiagramm} gehört zu den \textbf{Verhaltensdiagrammen} und stellt dar, wie \textit{Verhalten} realisiert wird.\\
 
-\begin{tcolorbox}
+\begin{tcolorbox}[title=Einsatzbereich]
 Aktivitätsdiagramme können in \textit{allen} Phasen des Softwareentwicklungsprozesses eingesetzt werden:
 
 \begin{itemize}
