--- a/docs/repetitorium/part three/Klassendiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Klassendiagramme/einsatzbereich.tex
@@ -3,7 +3,7 @@
 Das \textbf{Klassendiagramm} ist eins der ältesten und wichtigsten Bestandteile der UML.
 
 \vspace{2mm}
-\begin{tcolorbox}
+\begin{tcolorbox}[title=Klassendiagramm]
     Das \textbf{Klassendiagramm} beschreibt die Klassen eines Systems und die statischen Beziehungen zwischen ihnen (\cite[17]{Buh09}).\\
     Sie werden in Form von Domainklassen bei der Analyse und als detaillierte Entwürfe von Systemklassen als \textit{Blueprint} im gesamten Entwicklungsprozess eingesetzt.
 \end{tcolorbox}
