--- a/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
@@ -1,6 +1,6 @@
 \section{Einsatzbereich}
 
-\begin{tcolorbox}
+\begin{tcolorbox}[title=Sequenzdiagramm]
     \textbf{Sequenzdiagramme} stellen Verhalten auf der Ebene einer Interaktion dar.\\
     In der Phase des Klassendesigns werden die Teilnehmer der Interaktionen bestimmt, weshalb Sequenzdiagramme oft in dieser Phase genutzt werden.\\
     In der \textbf{Analysephase} können Sequenzdiagramme eingesetzt werden, um die Kommunikation der bis dahin ausgemachten \textbf{Geschäftsobjekte} zu modellieren, oder um \textbf{Anwendungsfälle} weiter zu spezifizieren.
